--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-headless-tabs": "^6.0.3",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
