--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^1.3.3",
+    "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-headless-tabs": "^6.0.3",
@@ -68,6 +69,7 @@
     ]
   },
   "devDependencies": {
+    "@types/randomcolor": "^0.5.7",
     "tailwindcss": "^3.2.6"
   }
 }
