--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.0",
     "axios": "^1.3.3",
     "randomcolor": "^0.6.2",
+    "rc-progress": "^3.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-headless-tabs": "^6.0.3",
