--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-headless-tabs": "^6.0.3",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
